--- a/templates/generatedreports.html
+++ b/templates/generatedreports.html
@@ -74,7 +74,7 @@
 
 <div class="header">
   <h1>Hello, {{ username }} 👋</h1>
-  <p>Your Previously Generated Documents</p>
+  <p>Your Generated Documents</p>
 </div>
 
 <div class="container">
