--- a/templates/login.html
+++ b/templates/login.html
@@ -258,7 +258,8 @@
 
 <!-- Sound -->
 <audio id="assistant-sound" preload="auto">
-  <source src="https://www.soundjay.com/buttons/sounds/button-16.mp3" type="audio/mpeg">
+  <source src="{{ url_for('static', filename='audio/sound.mp3') }}" type="audio/mpeg">
+  Your browser does not support the audio element.
 </audio>
 
 <script>
