--- a/templates/1.html
+++ b/templates/1.html
@@ -290,12 +290,12 @@
 
  //--------------------------------DEFAULT QUESTIONS------------------------------
     const defaultQuestions = [
-      "What is automation documentation?",
+      "What is automation document tool?",
       "Why is it important in software processes?",
-      "List the tools used in automation.",
+      "List the tools used in automation document tool.",
       "Describe test case automation steps.",
-      "What are benefits of automation?",
-      "List challenges in automation documentation."
+      "What are benefits of automation document tool?",
+      "List challenges in automation document tool."
     ];
   
  
